Authentication now uses http only cookies for the refresh token
